--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -62,35 +62,19 @@
 \chapter{Rešerše literatury}
 
 
-\chapter{Fyzicko geografická analýza}
+\chapter{Fyzicko geografické informace o oblasti}
 
 
-\section{Analýza povrchu (topografie??)}
 
-\section{Geologie}
-
-\section{Hydrologie}	
+\chapter{Kartografické podklady}
 
 
-\section{Meteorologie}
-
-\section{Významná fauna a flóra}
 
 
-\chapter{Kulturní analýza}
+\chapter{Kulturní a historické informace o oblasti}
 
 
-\section{Historie + pověsti}
-
-\section{Zobrazení řeky a okolí na dobových fotografiích a mapových dílech}
-
-\section{Významná města podél řeky}	
-
-
-\section{Turistika}
-
-
-\chapter{Webová stránka}
+\chapter{Modelování}
 
 \chapter{Diskuze}
 
