--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -19,3 +19,20 @@
   title = "Voda na Zemi",
   note = "[cit. 11.2.2019]",
 }
+
+@misc{UK,
+  author = "Miroslav Šobr",
+  institution = "Univerzita Karlova: Katedra fyzické geografie a geoekologie",
+  url = "https://www.natur.cuni.cz/geografie/fyzgeo/sobr/pedagogicka-cinnost/metody-ve-fg-i/hydrografie-povodi/hydrografie-zadani/view",
+  howpublished = "[online]",
+  title = "Hydrografie povodí: Úkol 5",
+  note = "[12.2.2019]",
+}
+
+@book{SMOOS,
+  author = "Eduard Oberfalcer",
+  title = "Po vlnách řeky Otavy",
+  publisher = "Svazek měst a obcí okresu Strakonice",
+  year = "2015",
+  ISBN = "978-80-260-8901-8",
+}
