--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -35,7 +35,7 @@
 \department{Katedra geomatiky     }
 \acknowledgements{Studijní program Geodézie a kartografie}
 
-\title{Název}
+\title{Kartografická vizualizace vývoje území v údolí řeky Otavy v okolí Strakonic}
 \authorGN{Petra} %(křestní) jméno (jména) autora
 \authorFN{Pasovská} %příjmení autora
 \authorWithDegrees{Bc. Petra Pasovská} %jméno autora včetně současných akademických titulů
@@ -60,93 +60,118 @@
 \end{introduction}
 
 \chapter{Rešerše literatury}
-Tato práce se dotýká tří hlavních témat - hydrologie, modelování a obecně řeky Otavy. Za tímto účelem byla provedena rešerše literatury na všechny tři hlavní oblasti. \\
+Tato práce se dotýká tří hlavních témat - kartografie, modelování a obecně řeky Otavy. Za tímto účelem byla provedena rešerše literatury na všechny tři hlavní oblasti. \\
 \\
-Knih týkajících se hydrologie je mnoho. Jednotlivé pojmy a jejich vysvětlení se však již ustálily. 
 
 
-\chapter{Hydrologie}
 
-Hydrologie je věda, která se zabývá zkoumáním zákonitostí výskytu, oběhu, časového a prostorového rozložení zásob vody na Zemi, jejího vzájemného působení s biotickými a abiotickými faktory s ohledem na její fyzikální, chemické a biologické vlastnosti. \cite{definiceHydro} 
-
-
-S hydrologií úzce souvisí i hydrogeografie, což je jedna z dílčích fyzickogeografických věd zabývající se vztahem mezi vodními útvary na pevnině a ostatními krajinotvornými prvky. Od hydrologie se liší tím, že že používá převážně geografické metody při studiu hydrologických jevů a procesů. \cite{FGkniha}
+\chapter{Otava}
+Zlatonosná a perlorodá řeka. Těmito přívlastky bývá Otava často označována. Keltové rýžovali zlato na Otavě již před dvěma tisíci lety. Díky tomu si také vysloužila svůj název – Otava\footnote{V keltštině Atavah či Watawah}, tedy Bohatá řeka. Druhý přívlastek si Otava vysloužila hojným výskytem perlorodek. Ty se v 15. a 16. století začaly chovat v Horažďovicích za velké podpory jezuitů. V roce 1809 a 1818 se výlovu perlorodek zúčastnil i císař František I. Populace perlorodek však rapidně klesla kvůli znečištění a nepříznivým změnám půdních a vegetačních poměrů a perlorodky byly na Otavě téměř vyhubeny. \cite{SMOOS}
 
 
-Hydrologii lze rozdělit podle dvou hlavních kritérií - dle pracovních metod a dle prostředí. Podle pracovních metod se rozděluje na hydrometrii a hydrografii. Hydrometrie zahrnuje měření mechanických, fyzikálních, chemických a biologických jevů ve vodních systémech, hydrografie popisuje hydrologické jevy, hydrologické prostředí, vlastnosti vodních systémů, třídění zpracování a klasifikaci získaných informací. Podle prostředí se rozděluje na hydrologii pevnin (ta lze následně rozdělit na hydrologii atmosféry, řek, jezer, bažin, podzemních vod a ledovců) a hydrologii oceánů. \cite{hydro_net}
+\section{Hydrologie}
+Ústředním tématem této práce je řeka Otava. Z toho důvodu je vhodné prozkoumat i vědu, která se řekami zabývá. Jedná se o hydrologii.
+
+
+Hydrologie je věda, která se zabývá zkoumáním zákonitostí výskytu, oběhu, časového a prostorového rozložení zásob vody na Zemi, jejího vzájemného působení s biotickými a abiotickými faktory s ohledem na její fyzikální, chemické a biologické vlastnosti. 
+
+
+S hydrologií úzce souvisí i hydrogeografie, což je jedna z dílčích fyzickogeografických věd zabývající se vztahem mezi vodními útvary na pevnině a ostatními krajinotvornými prvky. Od hydrologie se liší tím, že používá převážně geografické metody při studiu hydrologických jevů a procesů. 
+
+
+Hydrologii lze rozdělit podle dvou hlavních kritérií - dle pracovních metod a dle prostředí. Podle pracovních metod se rozděluje na hydrometrii a hydrografii. Hydrometrie zahrnuje měření mechanických, fyzikálních, chemických a biologických jevů ve vodních systémech, hydrografie popisuje hydrologické jevy, hydrologické prostředí, vlastnosti vodních systémů, třídění zpracování a klasifikaci získaných informací. Podle prostředí se rozděluje na hydrologii pevnin (ta lze následně rozdělit na hydrologii atmosféry, řek, jezer, bažin, podzemních vod a ledovců) a hydrologii oceánů. 
 
 Součástí hydrologie je několik vědních oborů. Za zmínku stojí například hydrometeorologie, hydroklimatologie či hydrogeologie. Přesto není do hydrologie začleněna oceánografie a meteorologie, neboť voda je jen jedním ze zkoumaných aspektů. Hydrologie byla řadu let analyzována v rámci geografie. Oddělila se až v 19. století jako samostatná vědní disciplína hydrologie. 
 
 Počátky studia vody na Zemi však sahají do roku 3000 př. n. l. V té době ve starověkém Egyptě byla sledována hladina Nilu na tzv. nilometrech.\footnote{Nilometr je moderní označení pro stavbu ve starověkém Egyptě pro měření výšky nilských záplav. Mají podobu dlouhé sestupné chodby nebo studny a většinou jsou propojeny s hladinou Nilu. Výška byla určována v loktech.} Podobná pozorování probíhala i v Mezopotámii na řece Eufrat a Tigris nebo v Číně. Vodou se zabývali i řečtí filozofové, zejména Thales z Milétu, Platón či Aristoteles. 
 
 
-Ústředním tématem této práce je řeka Otava. Z hydrologického hlediska tedy budou blíže prozkoumány jen pojmy a analýza týkající se řek.
+Ústředním tématem této práce je řeka Otava. Z hydrologického hlediska tedy budou blíže prozkoumány jen pojmy a analýza týkající se řek. \cite{definiceHydro} \cite{FGkniha} \cite{hydro_net}
 
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=9cm, angle =270]{pics/ot1.jpg}
+	\includegraphics[width=11cm, angle =270]{pics/ot1.jpg}
 	\caption{Otava na Podskalí ve Strakonicích na podzim}
 	\label{obrazek:ot1}
 \end{figure}
 
 
-\section{Vysvětletní základních termínů (pojmů??)}
-Při hydrologické analýze jsou používány základní hydrologické termíny. Ty jsou zde stručně popsány a vysvětleny, neboť jsou v rámci práce používány a je předpokládána jejich znalost.
+\subsection{Vysvětletní základních termínů}
+Při hydrologické analýze je vhodná znalost základních pojmů. Ty jsou zde stručně popsány a vysvětleny, neboť jsou v rámci práce často používány.
 
 
 \begin{description}
 \item[Pramen:] místo přirozeného výtoku podzemní vody, může být studený nebo termální, v oblastech se sopečnou činností gejzír
 \item[Soutok:] místo, kde se setkávají nejméně dva vodní toky
 \item[Vodní tok:] voda tekoucí po zemském povrchu v korytě mezi břehy, větší toky jsou označovány jako řeky, menší toky jsou potoky
-\item[Říční síť:] říční síť je půdorysná síť hlavního toku řeky a jejích přítoků, tvar je závislý na geologických a fyzickogeografických podmínkách povodí řeky
+\item[Říční síť:] půdorysná síť hlavního toku řeky a jejích přítoků, tvar je závislý na geologických a fyzickogeografických podmínkách povodí řeky
 \item[Hustota říční sítě:] poměr délky všech toků k ploše povodí
 \item[Povodí:] plocha území, ze kterého tok odvádí povrchovou a podpovrchovou vodu
 \item[Rozvodí:] hranice mezi jednotlivými povodími
 \item[Rozvodnice:] pomyslná čára mezi sousedními povodími
 \item[Úmoří:] plocha, ze které se všechna povrchová voda odvádí do moře nebo oceánu
 \item[Přítok:] tok nižšího řádu, který se vlévá do toku vyššího řádu
-\item[Ústí:] část toku, kde se vlévá do jiného toku, vodní nádrže či oceánu
+\item[Ústí:] místo, kde se tok vlévá do jiného toku, vodní nádrže či oceánu
 \item[Zátopové území:] část území v okolí vodních toků, které je periodicky zaplavované zvýšenými průtoky (pozn.: též inundace)
 \end{description}
 
 
 
-\section{Hydrologická analýza}
+\subsection{Hydrologická analýza}
 V rámci práce byla provedena jednoduchá základní hydrologická analýza. Pro analýzu byla použita data z katalogu DIBAVOD. Pro tvorbu analýzy byl použit software ArcGIS a MS Excel. Analýza byla prováděna dle studijních materiálů Univerzity Karlovy Katedry fyzické geografie a geoekologie. \cite{UK}
 
-Otava vzniká na Šumavě u Čeňkovy Pily soutokem Vydry a Křemelné. Vydra pramení na SZ svahu Luzného ve výšce 1215 m n. m. Díky okolním rašeliništím má Vydra rezavohnědou barvu. Svůj název si nese až po soutoku s Rokladnským potokem v obci Modrava\footnote{V některých publikacích se uvádí název Vydra již od Březníku}. Řeka Křemelná pramení v Železnorudské hornatině v přírodní rezervací Prameniště a severním svahu hory Pancíř (1214 m n. m.). \cite{SMOOS}
+Otava vzniká na Šumavě u Čeňkovy Pily soutokem Vydry a Křemelné. Vydra pramení na SZ svahu Luzného ve výšce 1215 m n. m. Díky okolním rašeliništím má Vydra rezavohnědou barvu. Svůj název si nese až po soutoku s Roklanským potokem v obci Modrava\footnote{V některých publikacích se uvádí název Vydra již od Březníku}. Řeka Křemelná pramení v Železnorudské hornatině v přírodní rezervaci Prameniště a severním svahu hory Pancíř (1214 m n. m.). \cite{SMOOS}
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=9cm]{pics/vydra.jpg}
+	\includegraphics[width=12cm]{pics/vydra.jpg}
 	\caption{Řeka Vydra}
 	\label{obrazek:ot1}
 \end{figure}
 
-Délka řeky je 111.7 km a plocha povodí je 3841 km$^2$. Ze znalosti délky a plochy povodí můžeme dané povodí charakterizovat dle vzorce:
-\\
+Řeka má několik přítoků. Mezi nejznámější patří řeka Ostružná, která ústí do Otavy nedaleko města Sušice. Významným přítokem je řeka Volyňka. Na soutoku Volyňky a Otavy se nachází město Strakonice. Před Pískem do Otavy vtéká Blanice. Poslední významnou řekou je Lomnice, která je levostranným přítokem Otavy. 
 
-$\alpha = \frac{P}{L^2} = \frac{3841}{111.7^2} = 0.31$ \\
+Otava je levostranným přítokem Vltavy, do níž se vlévá pod hradem Zvíkov poblíž Orlické přehrady. Povodí Otavy spadá do úmoří Severního moře (Otava~$\rightarrow$~Vltava~$\rightarrow$~Labe~$\rightarrow$~Severní moře ). 
 
 
-Povodí lze tedy charakterizovat jako vějířovité. Dále je možné vypočítat Graveliuv koeficient a koeficient protáhlosti povodí. Pro výpočet Graveliova koeficientu je zapotřebí znát délku rozvodnice $L_R$\footnote{Délka rozvodnice byla určena v software ArcGIS výpočtem geometrie prvku}. \\
+Pokud bychom chtěli popsat řeku čísly, pak její délka je 111.7 km a plocha povodí 3841 km$^2$. Ze znalosti délky a plochy povodí můžeme dané povodí popsat dle vzorce pro charakteristiku povodí:\\
+
+
+$$\alpha = \frac{P}{L^2} = \frac{3841}{111.7^2} = 0.31$$ \\
+
+
+Povodí lze tedy označit jako vějířovité. Dále je možné vypočítat Graveliuv koeficient a koeficient protáhlosti povodí. Pro výpočet Graveliova koeficientu je zapotřebí znát délku rozvodnice $L_R$\footnote{Délka rozvodnice byla určena v software ArcGIS výpočtem geometrie prvku}. \\
 
 $Gravieluv\ koeficient: K_G = \frac{L_R}{2 \sqrt{P \cdot \pi}} = \frac{412}{2\sqrt{3841\cdot \pi}} = 1.88$ \\
 
 $Koeficient\ protáhlosti\ povodí: R_E = \frac{2\cdot \sqrt{P / \pi}}{L} = \frac{2 \cdot \sqrt{3841 / \pi}}{111.7} = 0.63 $ \\
 
-Otava má několik přítoků. Mezi nejznámější patří Volyňka, Blanice a Lomnice. Otava ústí do Vltavy pod hradem Zvíkov. Povodí Otavy spadá do úmoří Severního moře (Otava $\rightarrow$ Vltava $\rightarrow$ Labe). 
 
 
+Ze znalosti délky všech toků jsme schopni vypočítat hustotu říční sítě.\\
 
+$Hustota\ říční\ sítě: r = \frac{\sum L}{P} = \frac{a}{b} $
+
+
+\section{Kulturní a historické informace o oblasti}
+Otava protéká několika historicky významnými městy. 
+
+\subsection{Sušice}
+
+
+\subsection{Horažďovice}
+
+
+\subsection{Strakonice}
+
+
+\subsection{Písek}
 
 \chapter{Kartografické podklady}
 
 
-
-
-\chapter{Kulturní a historické informace o oblasti}
+\chapter{Zpracování dat}
 
 
 \chapter{Modelování}
