--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -36,3 +36,12 @@
   year = "2015",
   ISBN = "978-80-260-8901-8",
 }
+
+@book{terminy,
+  author = "Dana Pokorná",
+  title = "Hydrologie a hydropedologie",
+  publisher = "Vydavatelství VŠCHT",
+  address = "Praha",
+  year = "2008",
+  ISBN = "978-80-7080-707-1"
+}
