abstract_Susice_Zichovce

--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -45,3 +45,19 @@
   year = "2008",
   ISBN = "978-80-7080-707-1"
 }
+
+@misc{zichovice,
+  url = "http://www.zichovice.cz/historie-obce/",
+  howpublished = "[online]",
+  title = "Historie obce Žichovice",
+  note = "[cit. 11.3.2019]",
+}
+
+@misc{rabi,
+  url = "http://www.hrad-rabi.cz/",
+  howpublished = "[online]",
+  title = "Hrad Rabí",
+  note = "[cit. 11.3.2019]",
+}
+
+
