--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -60,4 +60,16 @@
   note = "[cit. 11.3.2019]",
 }
 
+@misc{susice,
+  url = "http://www.susice-sumava.cz/",
+  howpublished = "[online]",
+  title = "Sušice",
+  note = "[cit. 15.3.2019]",
+}
 
+@misc{hd,
+  url = "https://www.muzeumhd.cz/index.php/zamek-v-horazdovicich/velky-sal/",
+  howpublished = "[online]",
+  title = "Městské muzeum Horažďovice",
+  note = "[cit. 20.3.2019]",
+}
