--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -73,3 +73,18 @@
   title = "Městské muzeum Horažďovice",
   note = "[cit. 20.3.2019]",
 }
+
+@misc{zlato,
+  url = "https://edu.techmania.cz/cs/veda-v-pozadi/958",
+  howpublished = "[online]",
+  title = "Věda a technika v pozadí: Rýžování zlata",
+  note = "[cit. 1. 4.2019]",
+}
+
+@book{obce,
+  author = "Eduard Oberfalcer",
+  title = "Encyklopedie měst a obcí okresu Strakonice",
+  publisher = "Svazek měst a obcí okresu Strakonice",
+  year = "2013",
+  ISBN = "978-80-260-5042-1",
+}
