--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -88,3 +88,17 @@
   year = "2013",
   ISBN = "978-80-260-5042-1",
 }
+
+@misc{shp,
+  url = "http://www.svornik.cz/?page_id=1407",
+  howpublished = "[online]",
+  title = "SHP v České republice",
+  note = "[cit. 5. 4.2019]",
+}
+
+@misc{cuzk,
+  url = "https://www.cuzk.cz/Uvod.aspx",
+  howpublished = "[online]",
+  title = "Český úřad zeměměřický a katastrální",
+  note = "[cit. 10. 4.2019]",
+}
