--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -102,3 +102,10 @@
   title = "Český úřad zeměměřický a katastrální",
   note = "[cit. 10. 4.2019]",
 }
+
+@misc{mapko,
+  title = "Mapování",
+  url = "http://pepa.fsv.cvut.cz/~mapovani/web/index.html",
+  howpublished = "[online]",
+  note = "[cit. 10. 4.2019]",
+}
