--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -13,12 +13,90 @@
   year = "1982",
 }
 
+@book{hydrovscht,
+  author = "Dana Pokorná and Jana Zábranská",
+  title = "Hydrologie a hydropedologie",
+  publisher = "Vysoká škola chemicko-technologická",
+  address = "Praha",
+  year = "2008",
+ ISBN = "978-80-7080-707-1",
+}
+
+@book{topo_skripta,
+  author = "Bohuslav Veverka and Růžena Zimová",
+  title = "Topografická a tematická kartografie",
+  publisher = "Česká technika - nakladatelství ČVUT",
+  address = "Praha",
+  year = "2008",
+ ISBN = "978-80-01-04157-4",
+}
+
+@book{mapovani_brno,
+  author = "František Hromádka and Jiří Pažourek and Jan Busta",
+  title = "Mapování",
+  publisher = "Vysoké učení technické",
+  address = "Brno",
+  year = "1980",
+}
+
+@book{tematicka_brno,
+  author = "Jaroslav Hybášek",
+  title = "Topografická a tematická kartografie - učební texty",
+  publisher = "Vysoké učení technické",
+  address = "Brno",
+  year = "1993",
+}
+
+@book{mapyolomouc,
+  author = "Vít Voženílek",
+  title = "Metody tematické kartografie - Vizualizace prostorových jevů",
+  publisher = "Univerzita Palackého v Olomouci",
+  address = "Olomouc",
+  year = "2011",
+ ISBN = "9788024427904",
+}
+
+@book{kartoblaha,
+  author = "Jan D. Bláha",
+  title = "Vybrané okruhy z geografické kartografie",
+  publisher = "Univerzita J. E. Purkyně",
+  address = "Ústí nad Labem",
+  year = "2017",
+ ISBN = "978-80-7561-092-8",
+}
+
+@book{transformace,
+  author = "Jiří Cajthaml",
+  title = "Analýza starých map v digitálním prostředí na příkladu Műllerových map Čech a Moravy",
+  publisher = "ČVUT",
+  address = "Praha",
+  year = "2012",
+ ISBN = "978-80-01-05010-1",
+}
+
 @misc{hydro_net,
   url = "https://is.muni.cz/do/rect/el/estud/pedf/ps14/fyz_geogr/web/pages/07-voda.html",
   howpublished = "[online]",
   title = "Voda na Zemi",
   note = "[cit. 11.2.2019]",
 }
+
+@book{sketchup,
+  author = "Laurent Brixius",
+  title = "Google SketchUp Workshop",
+  publisher = "Elsevier Inc.",
+  year = "2011",
+ ISBN = "978-0-240-81627-2",
+}
+
+@book{vizteren,
+  author = "Rűdiger Mach and Peter Petschek",
+  title = "Visualization of Digital Terrain and Landscape Data",
+  publisher = "Springer",
+  year = "2006",
+ ISBN = "978-3-540-30490-6",
+}
+
 
 @misc{UK,
   author = "Miroslav Šobr",
@@ -37,6 +115,22 @@
   ISBN = "978-80-260-8901-8",
 }
 
+@inbook{cina,
+author = {Dai, Shaoqing and Li, Jiajia and Zuo, Shudi and Ren, Yin and Jiang, Huixian},
+year = {2017},
+title = {Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China},
+isbn = {9780784481042},
+url = "http://gisersqdai.top/mycv/files/201602.pdf?fbclid=IwAR0lZRlcIuBzxVbEEL6d4PlxxFukzPaFqskBT6_WUkHyvGapTTPGxtmDz2g"
+}
+
+@article{clanek_flood,
+author = "Rifaat Abdalla and C. Vincent Tao and Jonathan Li",
+year = {2006},
+title = {A GIS-supported 3D approach for flood risk assessment of the Qu'Appelle River, Southern Saskatchewan},
+url = "https://www.researchgate.net/publication/240295475_A_GIS-supported_3D_approach_for_flood_risk_assessment_of_
+the_Qu'Appelle_River_Southern_Saskatchewan/download"
+}
+
 @book{terminy,
   author = "Dana Pokorná",
   title = "Hydrologie a hydropedologie",
@@ -45,6 +139,14 @@
   year = "2008",
   ISBN = "978-80-7080-707-1"
 }
+
+@misc{adina,
+  url = "https://dspace.cvut.cz/handle/10467/77624",
+  howpublished = "[online]",
+  title = "3D model historického údolí Vltavy v oblasti přehradní nádrže Slapy",
+  note = "[cit. 11.3.2019]",
+}
+
 
 @misc{zichovice,
   url = "http://www.zichovice.cz/historie-obce/",
@@ -109,3 +211,11 @@
   howpublished = "[online]",
   note = "[cit. 10. 4.2019]",
 }
+
+@misc{meteo,
+  title = "Elektronický meteorologický slovník",
+  url = "http://slovnik.cmes.cz/hesla",
+  howpublished = "[online]",
+  note = "[cit. 11. 4.2019]",
+}
+
